# management_api_tools

./: CHANGELOG.md  README.md  setup.cfg  tox.ini
examples/: policies_backup.py  policies_client.py
examples/policy_documents/: create-allow-all-by-data-creator.json  merge-allow-all-by-data-creator.json  update-allow-all-by-data-creator.json
management_api_tools/: __init__.py
management_api_tools/api/: __init__.py  metrics.py  policies.py
management_api_tools/utils/: __init__.py  auth.py
tests/: README.md  conftest.py  pytest.ini  test_metrics.py  test_policies.py
