[metadata]
name = management_api_tools
version = 1.0.0

description = Python SDK for Machina Management API's
long_description = file: README.md
long_description_content_type = text/markdown

author = Steven Cassamajor
author_email = contributor@networkaxis.org
url = https://github.com/Fauxsys/management_api_tools
project_urls =
    Documentation = https://dev.ionic.com/api/

classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7

install_requires =
    requests

packages = find:

[options.extras_require]
test =
    pytest
    pytest-cov
    tox
    parserconfig